# Server_CryptoNow

./: .env  .env.example  Cargo.toml
src/: config.rs  lib.rs  main.rs  multichain.rs  payment.rs  qr.rs  storage.rs
