[package]
name = "crypto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Веб сервер
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Solana - совместимые версии
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Криптография - совместимая версия
bs58 = "0.5"
ed25519-dalek = "1.0"
sha2 = "0.10"

# QR коды
qrcode = "0.14"
image = "0.24"
base64 = "0.21"

# Утилиты
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
urlencoding = "2.1"

# Async
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Serialization
bincode = "1.3"