[package]
name = "crypto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Веб сервер
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "time"] }

# Solana - точные совместимые версии (КРИТИЧНО!)
solana-client = "=1.18.26"
solana-sdk = "=1.18.26"
solana-program = "=1.18.26"
# Используем ту же версию что требует solana
spl-token = "=4.0.0"
spl-associated-token-account = "=2.3.0"

# Криптография
bs58 = "0.5"

# QR коды
qrcode = "0.14"
image = "0.24"
base64 = "0.21"

# Утилиты
# Утилиты
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

# Async
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Serialization
bincode = "1.3"